remove --enable-native-access=ALL-UNNAMED warning